src/components/CheckoutFunnel/PersonalInformation/PersonalInformation.module.scss
@import "styles/variables";
@import "styles/global";

.PersonalInformation {
  --button-height: 40px;

  @include mobile-media {
    padding: 0 0 $margin-small-3;
  }

  .logo,
  .breadcrumbs {
    margin-bottom: var(--vertical-spacing-normal);
  }

  .encryptionNotice {
    display: flex;
    justify-content: center;
    align-items: center;
    background-color: rgba(#6156fa, 0.6);
    color: #fff;
    height: var(--button-height);
    font-size: var(--font-size-md);
    font-weight: var(--font-weight-normal);

    .lockIcon {
      font-size: 16px;
      margin-right: var(--horizontal-spacing-normal);
    }
  }

  .informationContainer {
    @include mobile-media {
      padding: 0 $margin-small-3;
    }
  }

  .expressCheckoutSubtitle {
    text-align: center;
    margin-bottom: 15px; // This seems to be a random 15px compared to most other spacings...
  }

  .section {
    padding: var(--vertical-spacing-normal) 0;
    border-bottom: 1px solid rgba(var(--primary-color-rgb), 0.1);

    @include mobile-media {
      padding: $margin-small-3 0;
    }

    .sectionTitleLine {
      display: flex;
      justify-content: space-between;
      align-items: flex-end;
      margin-bottom: var(--vertical-spacing-normal);

      @include mobile-media {
        margin-bottom: $margin-small-3;
      }
    }
  }

  .expressCheckoutOptions {
    display: flex;
    justify-content: space-between;
    align-items: center;

    @include mobile-media {
      flex-flow: column;
      row-gap: $margin-small-2;
    }

    .expressCheckoutOption {
      width: calc(50% - (var(--horizontal-spacing-normal) / 2));
      height: var(--button-height);
      display: flex;
      justify-content: center;
      align-items: center;
      border-radius: 4px;
      cursor: pointer;
      transition: background-color 0.1s linear;

      @include mobile-media {
        width: 100%;
      }

      &.paypal {
        background-color: #f6c657;

        &:hover {
          background-color: lighten(#f6c657, 5%);
        }
      }

      &.applePay {
        background-color: #0b0b09;
        color: #fff;

        &:hover {
          background-color: lighten(#0b0b09, 10%);
        }
      }

      .expressCheckoutLogo {
        height: 18px;
      }
    }
  }

  .expressCheckoutFootnote {
    text-align: center;
    font-size: var(--font-size-lg);
    font-weight: var(--font-weight-normal);
    color: var(--text-color-light);
    margin-bottom: var(--vertical-spacing-half);
    line-height: 1.5;

    @include mobile-media {
      width: 100%;
      margin-top: $margin-small-3;
      line-height: 0;
      font-size: var(--font-size-sm);
    }
  }

  .loginHint {
    font-size: var(--font-size-lg);
    font-weight: var(--font-weight-medium);
    color: var(--text-color-slight);
    margin-right: var(--horizontal-spacing-half);

    @include mobile-media {
      font-size: var(--font-size-xs);
    }
  }

  .loginLink {
    font-size: var(--font-size-lg);
    font-weight: var(--font-weight-medium);
    color: var(--primary-color);
    cursor: pointer;
    text-decoration: underline;

    @include mobile-media {
      font-size: var(--font-size-xs);
    }
  }

  .contactInfoSection {
    display: grid;
    grid-template-columns: 1fr auto auto;
    grid-template-rows: auto;
    grid-template-areas:
      "contact-info logged-in log-out"
      "user-name user-name user-name"
      "user-email user-email user-email";

    .contactInfoTitle {
      grid-area: contact-info;
    }

    .loggedIn {
      grid-area: logged-in;

      .loggedInName {
        font-style: italic;
      }
    }

    .logOut {
      grid-area: log-out;
    }

    .userName {
      color: var(--primary-color);
      margin-top: $margin-small-3;
      grid-area: user-name;

      @include mobile-media {
        font-size: var(--font-size-md);
        margin-top: var(--vertical-spacing-half);
      }
    }

    .userEmail {
      color: var(--primary-color);
      margin-top: $margin-small;
      grid-area: user-email;

      @include mobile-media {
        font-size: var(--font-size-md);
      }
    }
  }

  .createAccountSection {
    display: grid;
    align-content: space-between;
    grid-template-columns: 1fr 1fr;
    grid-template-rows: auto;
    row-gap: var(--vertical-spacing-half);
    column-gap: var(--vertical-spacing-half);
    grid-template-areas:
      "first-name last-name"
      "email email"
      "password confirm-password";

    @include mobile-media {
      font-size: var(--font-size-xs);
      grid-template-columns: 1fr;
      grid-template-areas:
        "first-name"
        "last-name"
        "email"
        "password"
        "confirm-password";
    }

    .firstName {
      grid-area: first-name;
    }

    .lastName {
      grid-area: last-name;
    }

    .email {
      grid-area: email;
    }

    .password {
      grid-area: password;
    }

    .confirmPassword {
      grid-area: confirm-password;
    }
  }

  .shippingMethodSection {
    .sectionTitle {
      margin-bottom: var(--vertical-spacing-half);
    }

    .method {
      display: flex;
      justify-content: space-between;

      .methodInfo {
        display: flex;
        flex-direction: column;

        .methodName {
          font-size: var(--font-size-lg);
          font-weight: var(--font-weight-medium);
          color: var(--primary-color);

          @include mobile-media {
            font-size: var(--font-size-sm);
          }
        }

        .methodEstimatedDelivery {
          font-size: var(--font-size-md);
          font-weight: var(--font-weight-normal);
          color: var(--text-color-light);

          @include mobile-media {
            font-size: var(--font-size-sm);
          }
        }
      }

      .methodPrice {
        font-size: var(--font-size-lg);
        font-weight: var(--font-weight-medium);
        color: var(--primary-color);

        @include mobile-media {
          font-size: var(--font-size-sm);
        }
      }
    }
  }

  .shippingAddressSection {
    margin-bottom: var(--vertical-spacing-normal);

    @include mobile-media {
      margin-bottom: 0;
    }

    .addressLine {
      font-size: var(--font-size-md);
      color: var(--primary-color);
      font-weight: var(--font-weight-normal);

      @include mobile-media {
        font-size: var(--font-size-sm);
      }

      & + .addressLine {
        margin-top: $margin-small;

        @include mobile-media {
          margin-top: 0;
        }
      }
    }

    .radioButton {
      margin-right: $margin-small-3;
    }
  }

  .navigationContainer {
    display: flex;
    justify-content: space-between;
    align-items: center;

    @include mobile-media {
      flex-flow: column;
      flex-direction: column-reverse;
    }
  }
}

